--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -1,8 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox minWidth="250.0" prefHeight="556.0" prefWidth="808.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="edu.file.encryption.app.WindowController">
-
+<VBox alignment="TOP_CENTER" minWidth="250.0" prefHeight="287.0" prefWidth="401.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.file.encryption.app.WindowController">
+	<MenuBar>
+		<Menu mnemonicParsing="false" text="File">
+			<MenuItem mnemonicParsing="false" onAction="#loadFile" text="Load" />
+			<MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
+		</Menu>
+	</MenuBar>
+	<VBox prefHeight="201.0" prefWidth="296.0" spacing="20.0" VBox.vgrow="ALWAYS">
+		<Label fx:id="inputFileLabel" text="File:" />
+		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
+			<Label text="Output name:" />
+			<TextField fx:id="outputFileName" />
+		</HBox>
+		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
+			<Button fx:id="sendButton" mnemonicParsing="false" text="Send" />
+		</HBox>
+		<padding>
+			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+		</padding>
+	</VBox>
+	<HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="401.0" spacing="10.0">
+		<padding>
+			<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+		</padding>
+		<ProgressBar fx:id="sendProgressBar" prefWidth="200.0" progress="0.0" HBox.hgrow="ALWAYS" />
+		<Label />
+	</HBox>
 </VBox>
-
