--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -8,24 +8,33 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="TOP_CENTER" minWidth="250.0" prefHeight="287.0" prefWidth="401.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.file.encryption.app.WindowController">
 	<MenuBar>
 		<Menu mnemonicParsing="false" text="File">
-			<MenuItem mnemonicParsing="false" onAction="#loadFile" text="Load" />
-			<MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
+			<MenuItem mnemonicParsing="false" onAction="#loadFile" text="Load">
+				<accelerator>
+					<KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+				</accelerator>
+			</MenuItem>
+			<MenuItem mnemonicParsing="false" onAction="#exit" text="Close">
+				<accelerator>
+					<KeyCodeCombination alt="UP" code="C" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+				</accelerator>
+			</MenuItem>
 		</Menu>
 	</MenuBar>
 	<VBox prefHeight="201.0" prefWidth="296.0" spacing="20.0" VBox.vgrow="ALWAYS">
-		<Label fx:id="inputFileLabel" text="File:" />
+		<Label fx:id="inputFileLabel" />
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
-			<Label text="Output name:" />
-			<TextField fx:id="outputFileName" />
+			<Label text="Output file name:" />
+			<TextField fx:id="outputFileName" disable="true" />
 		</HBox>
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
-			<Button fx:id="sendButton" mnemonicParsing="false" text="Send" />
+			<Button fx:id="sendButton" disable="true" mnemonicParsing="false" text="Send" />
 		</HBox>
 		<padding>
 			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -36,6 +45,6 @@
 			<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 		</padding>
 		<ProgressBar fx:id="sendProgressBar" prefWidth="200.0" progress="0.0" HBox.hgrow="ALWAYS" />
-		<Label />
+		<Label fx:id="stateLabel" />
 	</HBox>
 </VBox>
