--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -31,10 +31,14 @@
 		<Label fx:id="inputFileLabel" />
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
 			<Label text="Output file name:" />
-			<TextField fx:id="outputFileName" disable="true" />
+			<TextField fx:id="outputFileName" disable="true" onKeyReleased="#keyTyped" />
+		</HBox>
+		<HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="56.0" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
+			<Label text="Recipient:" />
+			<TextField fx:id="recipient" disable="true" onKeyReleased="#keyTyped" />
 		</HBox>
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
-			<Button fx:id="sendButton" disable="true" mnemonicParsing="false" text="Send" />
+			<Button fx:id="sendButton" disable="true" mnemonicParsing="false" onAction="#sendFile" text="Send" />
 		</HBox>
 		<padding>
 			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
