--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<VBox alignment="TOP_CENTER" minWidth="250.0" prefHeight="287.0" prefWidth="401.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.file.encryption.app.WindowController">
+<?import javafx.scene.layout.*?>
+<VBox alignment="TOP_CENTER" minWidth="250.0" prefHeight="287.0" prefWidth="401.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.file.encryption.app.WindowController">
 	<MenuBar>
 		<Menu mnemonicParsing="false" text="File">
 			<MenuItem mnemonicParsing="false" onAction="#loadFile" text="Load">
@@ -28,7 +21,7 @@
 		</Menu>
 	</MenuBar>
 	<VBox prefHeight="201.0" prefWidth="296.0" spacing="20.0" VBox.vgrow="ALWAYS">
-		<Label fx:id="inputFileLabel" />
+		<Label fx:id="inputFileLabel" text="No file chosen" />
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
 			<Label text="Output file name:" />
 			<TextField fx:id="outputFileName" disable="true" onKeyReleased="#keyTyped" />
@@ -36,6 +29,10 @@
 		<HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="56.0" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
 			<Label text="Recipient:" />
 			<TextField fx:id="recipient" disable="true" onKeyReleased="#keyTyped" />
+		</HBox>
+		<HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="56.0" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
+			<Label text="Encryption mode:" />
+			<ChoiceBox prefWidth="150.0" fx:id="algorithmMode" disable="true" />
 		</HBox>
 		<HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="514.0" spacing="10.0">
 			<Button fx:id="sendButton" disable="true" mnemonicParsing="false" onAction="#sendFile" text="Send" />
